hedgehog v0.1.1                         2018-01-15
==================================================
- added get.colour.palette function