@@ -9,11 +9,16 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r, include = FALSE}
+# set figure sizes
+knitr::opts_chunk$set(fig.width = 7, fig.height = 5) 
+```
+
 For visualization, I focus on writing functions for plots I use frequently and that require many lines of base R. At present, the package support two plots, `km.plot` and `stripboxplot`.
 
-# Kaplan-Meier Plots
+# Kaplan-Meier Plots – `km.plot`
 
-Kaplan-Meier plots are used for visualizing censored data. They are most commonly used in medical studies to visualize differences in patient survival. 
+Kaplan-Meier plots are used for visualizing censored data. They are most commonly used in medical studies for showing how survival differs between treatment groups.
 
 ```{r}
 library(hedgehog);
@@ -34,7 +39,7 @@ km.plot(
     );
 ```
 
-# Box plots
+# Box plots – `stipboxplot`
 
 Standard box plots hide the sample size in each group. One way of getting around this is to add a background stripplot that shows each point in the dataset. 
 
